--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,65 @@
 // If you want to override variables do it here
-@import "variables";
+@import 'variables';
 
 // Import styles
-@import "@coreui/coreui/scss/coreui";
-@import "@coreui/chartjs/scss/coreui-chartjs";
+@import '@coreui/coreui/scss/coreui';
+@import '@coreui/chartjs/scss/coreui-chartjs';
 
 // Vendors
-@import "vendors/simplebar";
+@import 'vendors/simplebar';
 
 // Custom styles for this theme
-@import "theme";
+@import 'theme';
 
 // If you want to add custom CSS you can put it here
-@import "custom";
+@import 'custom';
+
+// .rhap_container {
+//   background: #f7f7f9;
+// }
+
+// .rhap_controls-section {
+//   margin-bottom: 15px;
+// }
+
+// .rhap_progress-section {
+//   height: 20px;
+//   padding-bottom: 20px;
+// }
+
+// .rhap_main-controls-button {
+//   width: 80px !important;
+//   height: 80px !important;
+// }
+
+// .rhap_main-controls-button {
+//   width: 56px;
+//   height: 56px;
+//   display: block;
+// }
+
+// .rhap_main-controls-button svg {
+//   color: #ff5555;
+//   width: 100%;
+//   height: 100%;
+// }
+.rhap_progress-filled,
+.rhap_progress-indicator {
+  background-color: white !important;
+}
+
+// .rhap_button-clear.rhap_volume-button {
+//   color: #ff5555 !important;
+// }
+button.rhap_button-clear.rhap_repeat-button {
+    color: white !important; 
+    
+}
+
+.rhap_time {
+    color: white !important;
+}
+
+.rhap_volume-indicator {
+  background-color: white !important;
+}
